--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,10 @@
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.2.2",
-    "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
